--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import './fonts.css';
+@import './variables.css';
 
 /* ===== MODERN CSS RESET ===== */
 *,
@@ -101,18 +102,6 @@ textarea {
     resize: vertical;
 }
 
-
-:root {
-    --grey-900: #868688;
-    --primary: #2E6FF2;
-    --black: #1F1F22;
-    --info-500: #3B82F6;
-    --black-pure: #000000;
-
-    --border-radius: 0.375rem;
-    --border-radius: 0.5rem;
-}
-
 .r6 {
     border-radius: var(--border-radius);
 }
@@ -126,95 +115,10 @@ textarea {
 }
 .container {
     width: 100%;
-    max-width: 61rem; 
+    max-width: 61rem;
     margin: 0 auto;
 }
 
-
-
-
-
-.rental-block{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    gap:0.625rem;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    flex-wrap: wrap;
-    padding: 1.375rem 0rem;
-}
-.rental-info{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    flex: 1;
-    gap: 0.875rem;
-}
-.rental-info p{
-    /* padding: 0.375rem 0.875rem; */
-    transition: color 0.3s ease;
-    white-space: nowrap;    
-}
-/* .rental-info p + p::before {
-    content: " / ";
-} */
-.rental-info p::after {
-    content: " /";
-    margin-left: 0.375rem;
-}
-
-.rental-info p:last-child::after {
-    content: "";
-}
-.rental-info p:hover{
-    color: var(--primary);
-}
-.rental-info p:first-child{
-    /* padding: 0.375rem 0.875rem 0.375rem 0; */
-}
-.save-button{
-    padding: 0.375rem 0.875rem;
-    display: inline-flex;
-    align-items: center;
-    gap: 0.6rem;
-    transition: color 0.3s ease;
-}
-.save-button:hover{
-    color: var(--primary)
-}
-.save-button__icon {
-    width: 1.5rem; 
-    height: 1.5rem; 
-}
-
-/* Адаптивные стили для экранов ≤ 925px */
-@media (max-width: 925px) {
-    .burger-btn {
-        display: flex; 
-    }    
-    .menu_block {
-        display: none ; 
-    }
-    .rental-block {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 1.5rem;
-    }
-    .rental-info p{
-        gap: 0.375rem 0.875rem 0.375rem 0rem;
-    }
-    .save-button {
-        align-self: flex-start;        
-        padding: 0.125rem 0;
-    }
-}
-
 @media (max-width: 399px) {
-    .logo_block{
-        max-width: 160px;
-    }
+
 }
